# gitext

./: .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml
docs/: gittool-use-demo.mov
src/gittool/: __init__.py  use.py
src/lib/: index.ts
