[project]
name = "gittool"
version = "0.1.5"
description = "gittool"
authors = [
    {name = "Jimmy Lin", email = "b00502013@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
use = "gittool.use:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
