[project]
name = "gittool"
version = "0.1.9"
description = "Git tool"
authors = [
    {name = "Jimmy Lin", email = "b00502013@gmail.com"},
]
dependencies = [
    "rich>=13.7.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
gittool-use = "gittool.use:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
